Fixed button align and update merchant list after create new merchant

--- a/ui/src/css/merchant.css
+++ b/ui/src/css/merchant.css
@@ -92,3 +92,7 @@
     display: inline-block;
     width: auto;
 }
+
+.bgColor {
+  background: white !important;
+}
